--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "formik": "^2.4.2",
+    "i18next": "^22.4.9",
     "react": "18.2.0",
+    "react-i18next": "^12.1.5",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-localize": "^2.2.4",
     "react-native-reanimated": "^3.1.0",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.5.3",
