--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "formik": "^2.4.2",
@@ -20,7 +21,7 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-localize": "^2.2.4",
-    "react-native-reanimated": "^3.1.0",
+    "react-native-reanimated": "^3.3.0",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
