--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "formik": "^2.4.2",
     "i18next": "^22.4.9",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
+    "react-native-share": "^9.2.3",
     "react-native-svg": "^13.9.0",
     "yup": "^1.2.0"
   },
