--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "18.2.0",
     "react-i18next": "^12.1.5",
     "react-native": "0.71.8",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-picker": "^5.6.1",
     "react-native-localize": "^2.2.4",
     "react-native-reanimated": "^3.3.0",
     "react-native-redash": "^18.1.0",
